--- a/DeckBuilderPro/Content/AngularTemplates/ngListDeck.html
+++ b/DeckBuilderPro/Content/AngularTemplates/ngListDeck.html
@@ -1,1 +1,6 @@
-﻿<h2>{{ Deck.Name }} - ListDeck ({{ Deck.CardCount }}))</h2>
+﻿<h2>{{ deck.Name }} - ListDeck ({{ deck.CardCount }}))</h2>
+
+
+
+
+<a href="#" class="btn">Cancel</a>
